# autolitdb

./: .gitignore  README.md  claude.md  pyproject.toml
config/: example_config.yaml
prompts/: relevance_filter.md
src/autolitdb/: __init__.py  cli.py  config.py  pipeline.py
src/autolitdb/downloader/: __init__.py  client.py
src/autolitdb/filtering/: __init__.py  llm_filter.py
src/autolitdb/rag/: __init__.py  database.py  pdf_processor.py
src/autolitdb/sources/: __init__.py  base.py  pubmed.py
tests/: __init__.py  test_sources.py
